# reqs-sync

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
reqs_sync/: cli.py  r2toml.py
tests/: test_reqs_sync.py
